# tuna

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES
.github/workflows/: ci.yml
benchmark/: bench.sh  bench_datasets.sh  bench_ecoli_kmc_only.sh  bench_ecoli_n_sweep.sh  bench_ecoli_scale.sh  bench_human.sh  bench_human_kmc_only.sh  bench_human_n_sweep.sh  bench_human_scale.sh  bench_k_sweep.sh  bench_m_human.sh  bench_part_modes.sh  cluster_n_sweep.sh  cluster_run_all.sh  perf_cache_bench.sh  plot_datasets.py  plot_datasets_compare.py  plot_ecoli_n_sweep.py  plot_ecoli_scale.py  plot_human_scale.py  plot_m_sweep.py  plot_min_dist.py  plot_n_sweep_ecoli.py  plot_part_modes.py
conda/: build.sh  meta.yaml
docs/: pipeline.md  pipeline_diagram.py
include/: DNA.hpp  DNA_Utility.hpp  Fixed_Cap_Deque.hpp  Kmer.hpp  Kmer_Utility.hpp  Minimizer_Iterator.hpp  Minimizer_Utility.hpp  globals.hpp  minimizer_window.hpp  nt_hash.hpp  utility.hpp
include/helicase_cpp/: config.hpp  dna_format.hpp  input.hpp  lexer.hpp
include/kache-hash/: Concurrent_Hash_Table.hpp  DNA.hpp  DNA_Utility.hpp  Directed_Vertex.hpp  Kmer.hpp  Kmer_Utility.hpp  Minimizer_Iterator.hpp  RW_Lock.hpp  Rolling_Hash.hpp  Spin_Lock.hpp  Streaming_Kmer_Hash_Table.hpp  simd_compat.hpp  utility.hpp
include/kmc_api/: kmc_file.h
include/tuna/: tuna.hpp
include/wyhash/: wyhash.h
src/: CLI.cpp  CLI.hpp  Config.hpp  count.hpp  fast_fasta.hpp  kff_output.hpp  main.cpp  partition_hash.hpp  partition_kmc.hpp  partition_kmtricks.hpp  pipeline.hpp  ram_mode.hpp  seq_source.hpp  setup.hpp  superkmer_io.hpp
src/prot/: CLI_prot.cpp  CLI_prot.hpp  aa_encode.hpp  aa_hash.hpp  config_prot.hpp  count_prot.hpp  main_prot.cpp  minimizer_prot.hpp  partition_prot.hpp  pipeline_prot.hpp  seq_prot.hpp  superkmer_prot.hpp
